# flipperzero_protobuf_rs

./: .gitmodules  Cargo.toml  README.md  update-version.sh
flipperzero_protobuf_raw/: Cargo.toml  README.md  build.rs  update-version.sh
flipperzero_protobuf_raw/src/: lib.rs
flipperzero_rpc_transport/: Cargo.toml
flipperzero_rpc_transport/src/: codec.rs  error.rs  lib.rs  proto.rs  usb.rs
playground/: Cargo.toml
playground/src/: main.rs
