[package]
name = "flipperzero_rpc_transport"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
futures-util = { version = "0.3.31", features = ["sink"] }
integer-encoding = "4.0.2"
tokio = { version = "1.45.1", features = ["io-util", "sync", "time"] }
tokio-serial = { version = "5.4.5", features = ["rt"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
